[gd_scene load_steps=3 format=2]

[ext_resource type="Theme" uid="uid://b87lntx1cb4rs" path="res://assets/base/default_theme.tres" id="1"]
[ext_resource type="Script" path="res://settings/mouse/mouse.gd" id="2"]





[node name="mouse" type="TabBar"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings_Scroll" type="ScrollContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
follow_focus = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings_VBC" type="VBoxContainer" parent="Settings_Scroll"]
offset_right = 854.0
offset_bottom = 242.0
size_flags_horizontal = 3
theme = ExtResource( 1 )

[node name="HS_Label" type="Label" parent="Settings_Scroll/Settings_VBC"]
offset_right = 854.0
offset_bottom = 14.0
text = "Horizontal Sensitivity"

[node name="Horizontal_HBC" type="HBoxContainer" parent="Settings_Scroll/Settings_VBC"]
offset_top = 18.0
offset_right = 854.0
offset_bottom = 34.0

[node name="Horizontal_Slider" type="HSlider" parent="Settings_Scroll/Settings_VBC/Horizontal_HBC"]
offset_right = 708.0
offset_bottom = 16.0
size_flags_horizontal = 3
max_value = 5.0
step = 0.01
tick_count = 5

[node name="Horizontal_Value" type="Label" parent="Settings_Scroll/Settings_VBC/Horizontal_HBC"]
offset_left = 712.0
offset_top = 1.0
offset_right = 854.0
offset_bottom = 15.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.2

[node name="Horizontal_CheckButton" type="CheckButton" parent="Settings_Scroll/Settings_VBC"]
offset_top = 38.0
offset_right = 854.0
offset_bottom = 78.0
text = "Horizontal Invert"

[node name="VS_Label" type="Label" parent="Settings_Scroll/Settings_VBC"]
offset_top = 82.0
offset_right = 854.0
offset_bottom = 96.0
text = "Vertical Sensitivity"

[node name="Vertical_HBC" type="HBoxContainer" parent="Settings_Scroll/Settings_VBC"]
offset_top = 100.0
offset_right = 854.0
offset_bottom = 116.0

[node name="Vertical_Slider" type="HSlider" parent="Settings_Scroll/Settings_VBC/Vertical_HBC"]
offset_right = 708.0
offset_bottom = 16.0
size_flags_horizontal = 3
max_value = 5.0
step = 0.01
tick_count = 5

[node name="Vertical_Value" type="Label" parent="Settings_Scroll/Settings_VBC/Vertical_HBC"]
offset_left = 712.0
offset_top = 1.0
offset_right = 854.0
offset_bottom = 15.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.2

[node name="Vertical_CheckButton" type="CheckButton" parent="Settings_Scroll/Settings_VBC"]
offset_top = 120.0
offset_right = 854.0
offset_bottom = 160.0
text = "Vertical Invert"

[node name="SS_Label" type="Label" parent="Settings_Scroll/Settings_VBC"]
offset_top = 164.0
offset_right = 854.0
offset_bottom = 178.0
text = "Scroll Sensitivity"

[node name="Scroll_HBC" type="HBoxContainer" parent="Settings_Scroll/Settings_VBC"]
offset_top = 182.0
offset_right = 854.0
offset_bottom = 198.0

[node name="Scroll_Slider" type="HSlider" parent="Settings_Scroll/Settings_VBC/Scroll_HBC"]
offset_right = 708.0
offset_bottom = 16.0
size_flags_horizontal = 3
max_value = 5.0
step = 0.01
tick_count = 5

[node name="Scroll_Value" type="Label" parent="Settings_Scroll/Settings_VBC/Scroll_HBC"]
offset_left = 712.0
offset_top = 1.0
offset_right = 854.0
offset_bottom = 15.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.2

[node name="Scroll_CheckButton" type="CheckButton" parent="Settings_Scroll/Settings_VBC"]
offset_top = 202.0
offset_right = 854.0
offset_bottom = 242.0
text = "Scroll Invert"
